# Fastapi_App

./: .coverage  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
.scannerwork/: report-task.txt
tests/: test_main.py
